# adaptive_gravity

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  M31_ARP_velocity_profile.csv  README.md  README_CLI.md  adaptive_gravity_sim.py  arp_inflation_sim.py  arp_reheating_sim.py  bulge_disk_adaptive_rotation.csv  final.md  galaxy_calibrated_final.csv  m33_rotation_adaptive.csv  ngc2403_adaptive_rotation_curve.csv  pyproject.toml  quantum_foam_arp.py  requirements.txt  rotation_diffusion_sweep.csv  rotation_mu_sweep.csv  ugc2885_adaptive_rotation_curve.csv  update.md
cosmo/params/: baseline.json
docs/: SPARC.md  aceef.md
galaxies/: DDO_154.json  Fornax.json  M33.json  NGC_2403.json  NGC_3198.json  UGC_2885.json
src/adaptive_gravity/: __init__.py  cosmology.py  simulate.py
tests/: test_import.py
