[project]
name = "adaptive-gravity-arp"
version = "0.1.0"
description = "Adaptive Gravity (ARP) rotation curve simulator with disk+bulge+gas mass models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="RDM3DC"}]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "scipy>=1.11",
    "requests>=2.31",
    "tqdm>=4.65",
    "astropy>=6.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
